# OpenGL

./: CMakeCache.txt  CMakeLists.txt  Game  Makefile  build.ninja  build.sh  cmake_install.cmake  imgui.ini  main.cpp  main.cpp.bak  run.sh
Core/: Camera.cpp  Camera.h  Core.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  GameEngine.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  shaderClass.cpp  shaderClass.h
Core/Editor/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Core/Scene/: Components.h  Components.hpp  Entity.cpp  Entity.h  Entity.hpp  Entity.inl  Scene.cpp  Scene.h  Scene.hpp
Core/Shaders/: default.frag  default.geom  default.vert  normals.frag
Core/entt/: entt.hpp
builds/: CMakeCache.txt  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
